src/test/deca/syntax/invalid/provided/b.deca

class A {
    protected int x;
}

class B extends A {
    void m(B b) {
        x = 0;
	b.x = 0;	
    }
}

